tests/snapshots/apply_view_diff__diff_captured_through_dotrift_pager__copy_diff_shows_removed_and_added_lines.snap
---
source: tests/apply_view_diff.rs
expression: diff
---
--- <root>/target/file2
+++ <root>/source/file1
@@ -1 +1 @@
-content1
+content2
